[package]
name = "lff"
version = "0.1.0"
authors = ["Maikel Chandika <mkdika@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.2.10"
walkdir = "2.0.1"
pretty-bytes = "0.2.2"
colored = "1.9.1"
